@@ -12,7 +12,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: prop.c,v 1.29 2010/09/27 17:20:23 bzfheinz Exp $"
+#pragma ident "@(#) $Id: prop.c,v 1.30 2010/10/07 19:58:12 bzfheinz Exp $"
 
 /**@file   prop.c
  * @brief  methods and datastructures for propagators
@@ -190,11 +190,14 @@ SCIP_RETCODE SCIPpropInit(
       return SCIP_INVALIDCALL;
    }
 
-   SCIPclockReset(prop->propclock);
+   if( set->misc_resetstat )
+   {
+      SCIPclockReset(prop->propclock);
 
-   prop->ncalls = 0;
-   prop->ncutoffs = 0;
-   prop->ndomredsfound = 0;
+      prop->ncalls = 0;
+      prop->ncutoffs = 0;
+      prop->ndomredsfound = 0;
+   }
 
    if( prop->propinit != NULL )
    {
